# mycelium

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  mix.exs  reset_event_store.sh
.github/workflows/: release.yml
apps/content_server/: .gitignore  README.md  mix.exs
apps/content_server/assets/: .npmrc  build.js  package-lock.json  package.json
apps/content_server/lib/: content_server.ex  content_server_web.ex  release.ex
apps/content_server/test/: content_server_test.exs
apps/core/: mix.exs
apps/core/lib/: core.ex
apps/core/lib/core/: integrity.ex  (+2 more)
apps/core/test/: core_test.exs
apps/data_store/: .gitignore  README.md  mix.exs
apps/data_store/lib/: data_store.ex  release.ex
apps/key_x/: .gitignore  README.md  mix.exs
apps/key_x/lib/: key_x.ex  release.ex
apps/key_x/native/key_x_protocol_agent/: Cargo.toml
apps/key_x/native/key_x_protocol_agent/src/: lib.rs
apps/key_x/test/: key_x_test.exs
apps/landlord/: .gitignore  README.md  mix.exs
apps/landlord/lib/: landlord.ex  release.ex
apps/landlord/test/: landlord_test.exs
apps/liaison_server/: .gitignore  README.md  mix.exs
apps/liaison_server/lib/: liaison_server.ex  liaison_server_web.ex  release.ex
apps/liaison_server/priv/: paddle.pub
apps/liaison_server/test/: liaison_server_test.exs
apps/maestro/: README.md  mix.exs
apps/maestro/lib/: maestro.ex  release.ex
apps/maestro/test/: maestro_test.exs
apps/meta_store/: .gitignore  README.md  mix.exs
apps/meta_store/lib/: meta_store.ex  release.ex
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
(+268 files in other folders)
