[package]
name = "key_x_protocol_agent"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "key_x_protocol_agent"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25.0"
rand = "0.7.3"
base64 = "0.13"
futures = { version = "0.3", features = ["executor"] }

key-x-wasm = { path = "./key-x-wasm" }
